--- a/README
+++ b/README
@@ -1,11 +1,19 @@
 Welcome to FTCoreText Objective C library for iOS development.
 
-Implemantation Instructions:
+Implementation Instructions:
 
     Import CoreText.framework to your library
     Import FTCoreTextView.h
     Create an Instance of FTCoreTextView
     set the styles and the text for the view
+
+Styles Markup:
+
+ _default: It is the default applied to the whole text. MArkups is not needed on the text
+ _page: Divide the text in pages. Respond to markup <_page/>
+ _bullet: define styles for bullets. Respond to Markups <bullets />
+ _image: define style for images. Respond to markup <_image>imageNameOnBundle.extension</_image>
+ _link: define style for links. Respond to markup <_link>link_target|link name</_link>
 
 Notes:
 
